--- a/purchase/build.gradle
+++ b/purchase/build.gradle
@@ -6,8 +6,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 28
 
     lintOptions {
         abortOnError false
@@ -15,7 +14,7 @@ android {
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 28
         versionCode 5
         versionName "5.0"
     }
@@ -91,14 +90,10 @@ bintray {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    provided 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    compileOnly 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.volley:volley:1.1.1'
 
-}
-
-configurations{
-    all*.exclude group: 'com.android.volley'
 }
 
