--- a/purchase/build.gradle
+++ b/purchase/build.gradle
@@ -31,7 +31,7 @@ android {
 ext.build = [
         mVersion : "0.0.9",
         mUser  : "imanx",
-        mToken : "",
+        mToken : "9798a6fc07dde20ed654f98b91cf428cf5b0be6f",
 ]
 
 
