--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 29
+    buildToolsVersion '26.0.3'
 
     lintOptions {
         abortOnError false
@@ -17,7 +17,7 @@ android {
     defaultConfig {
         applicationId "com.zarinpal.ewallets.purchasesdk"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
     }
@@ -30,11 +30,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+
+//    implementation 'com.zarinpal:purchase:0.0.9'
+
+
+    implementation project (":purchase")
 
 
 
-    compile project(path: ':purchase')
+   // compile project(path: ':purchase')
 }
