--- a/purchase/src/main/AndroidManifest.xml
+++ b/purchase/src/main/AndroidManifest.xml
@@ -1,9 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.zarinpal.ewallets.purchase">
+    package="com.zarinpal.ewallets.purchase">
+
 
     <application
+
         android:allowBackup="true"
         android:label="@string/app_name">
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+
 
     </application>
 
